fix(stylsheets/global): no word wrap on code blocks

--- a/_assets/stylesheets/_global.scss
+++ b/_assets/stylesheets/_global.scss
@@ -75,6 +75,10 @@ pre > code {
     width: 100%;
 }
 
+pre.highlight {
+    overflow-wrap: normal;
+}
+
 // lists
 ul.inline {
     @include inline-list();
